добавил логирование и много чего еще=)
